# trick

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .perltidyrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChangeLog.html  LICENSE  Makefile  README  README.md  axisrect.cpp  axisrect.h  blame.cpp  blame.h  blame.pro  boundedtrickbinaryriver.cpp  boundedtrickbinaryriver.h  configure  configure.ac  dp.cpp  dp.h  dpfilterproxymodel.h  frame.cpp  frame.h  githubpat.txt  gsetup  job.cpp  job.h  koviz.pri  koviz.pro  main.cpp  monte.cpp  monte.h  montemodel.cpp  montemodel.h  montewindow.cpp  montewindow.h  (+41 more)
autoconf/: configure.ac
autoconf/m4/: na_help_strings.m4  tr_civetweb_home.m4  tr_clang_version.m4  tr_er7_utils.m4  tr_gcc_version.m4  tr_gsl_home.m4  tr_gtest.m4  tr_gtest_home.m4  tr_hdf5_home.m4  tr_java.m4  tr_jsc_dirs.m4  tr_llvm_home.m4  tr_mac_darwin.m4  tr_prepend_path.m4  tr_swig_bin.m4  tr_udunits_home.m4  tr_x11.m4  tr_xwindows.m4  trick_macros.m4
trick_source/codegen/Interface_Code_Gen/: .gitignore  BraceMacro.hh  CMakeLists.txt  ClassTemplateVisitor.cpp  ClassTemplateVisitor.hh  ClassValues.cpp  ClassValues.hh  ClassVisitor.cpp  ClassVisitor.hh  CommentSaver.cpp  CommentSaver.hh  ConstructValues.cpp  ConstructValues.hh  ConstructorPrinter.cpp  ConstructorPrinter.hh  EnumValues.cpp  EnumValues.hh  EnumVisitor.cpp  EnumVisitor.hh  FieldDescription.cpp  FieldDescription.hh  FieldVisitor.cpp  FieldVisitor.hh  FindTrickICG.cpp  FindTrickICG.hh  FunctionDescription.cpp  FunctionDescription.hh  FunctionVisitor.cpp  FunctionVisitor.hh  HeaderSearchDirs.cpp  HeaderSearchDirs.hh  ICGASTConsumer.cpp  ICGASTConsumer.hh  ICGDiagnosticConsumer.cpp  ICGDiagnosticConsumer.hh  PrintAttributes.cpp  PrintAttributes.hh  PrintAttributesFactory.cpp  PrintAttributesFactory.hh  PrintFileContents10.cpp  (+18 more)
trick_source/data_products/: .gitignore  CMakeLists.txt  makefile
trick_source/data_products/DPX/: CMakeLists.txt  DPX.doxygen  README  makefile
trick_source/data_products/EQParse/: CMakeLists.txt  eqparse.c  eqparse.h  eqparse_chkvalid.c  eqparse_error.c  eqparse_evaluate.c  eqparse_fillno.c  eqparse_funcsub.c  eqparse_math.c  eqparse_negcheck.c  eqparse_operatorcheck.c  eqparse_postfix.c  eqparse_protos.h  eqparse_stack.c  eqparse_stack.h  eqparse_takeinput.c  eqparse_test.c  makefile
trick_source/data_products/Log/: CMakeLists.txt  Csv.cpp  Csv.hh  DataStream.cpp  DataStream.hh  DataStreamFactory.cpp  DataStreamFactory.hh  DataStreamGroup.cpp  DataStreamGroup.hh  Delta.cpp  Delta.hh  ExternalProgram.cpp  ExternalProgram.hh  MatLab.cpp  MatLab.hh  MatLab4.cpp  MatLab4.hh  TrickBinary.cpp  TrickBinary.hh  TrickHDF5.cpp  TrickHDF5.hh  darwin_dl.c  darwin_dl.h  log.cpp  log.h  makefile  multiLog.cpp  parameter_types.h  parseLogHeader.cpp  trick_byte_order.h  trick_byteswap.cpp  trick_byteswap.h
trick_source/data_products/Var/: CMakeLists.txt  makefile  var.cpp  var.h
trick_source/data_products/fermi-ware/: .gitignore  README.md  XY.c  XY.h  XYP.h  dragAxes.c  dragAxes.h  drawAxes.c  drawAxes.h  makefile  psUtils.c  psUtils.h
trick_source/data_products/units/: CMakeLists.txt  include  init_units_system.cpp  makefile  map_trick_units_to_udunits.cpp  src  units_conv.c
trick_source/er7_utils/: CMakeLists.txt  common.mk
trick_source/er7_utils/CheckpointHelper/: .gitignore  Alloc.cpp  Alloc.hh  CheckpointHelper.sm  CheckpointItem.cpp  CheckpointItem.hh  Deque.hh  DoublePtrCollect.hh  InputAllocsChkptRestart.hh  List.hh  Manager.cpp  Manager.hh  Map.hh  Pair.hh  Queue.hh  Set.hh  Stack.hh  UnsafeChkptVector.hh  Unsafemap.hh  Unsafevector.hh  Vector.hh  trick_mem_utils.py
trick_source/er7_utils/math/: Makefile
trick_source/sim_services/: CMakeLists.txt
trick_source/sim_services/CheckPointAgent/: CheckPointAgent.cpp  ChkPtParseContext.cpp  ClassicCheckPointAgent.cpp  ClassicCheckPointerAgent.cpp  Makefile  Makefile_deps  PythonPrint.cpp  input_parser.l  input_parser.y  main_page.dox_in
trick_source/sim_services/CheckPointRestart/: .clang-format  CheckPointRestart.cpp  CheckPointRestart_c_intf.cpp  Makefile  Makefile_deps  checkpoint_map.cpp  checkpoint_pair.cpp  checkpoint_queue.cpp  checkpoint_sequence_stl.cpp  checkpoint_stack.cpp  next_attr_name.cpp  stl_type_name_convert.cpp
trick_source/sim_services/Clock/: BC635Clock.cpp  Clock.cpp  Clock.doxygen  GetTimeOfDayClock.cpp  Makefile_deps  TPROCTEClock.cpp  clock_c_intf.cpp  design.dox_in  main_page.dox_in  requirements.dox_in
trick_source/sim_services/Collect/: Makefile  Makefile_deps  collect.cpp
trick_source/sim_services/CommandLineArguments/: CommandLineArguments.cpp  Makefile_deps  command_line_c_intf.cpp  design.dox_in
trick_source/sim_services/DMTCP/: DMTCP.cpp  Makefile_deps  dmtcp_checkpoint_c_intf.cpp
trick_source/sim_services/DataRecord/: DRAscii.cpp  DRBinary.cpp  DRHDF5.cpp  DataRecordDispatcher.cpp  DataRecordGroup.cpp  Makefile  Makefile_deps  data_record_utilities.cpp  design.dox_in
trick_source/sim_services/DataTypes/: Doxyfile  makefile
trick_source/sim_services/DebugPause/: .clang-format  DebugPause.cpp  DebugPause_c_intf.cpp  Makefile  Makefile_deps  main_page.dox_in
trick_source/sim_services/EchoJobs/: .clang-format  EchoJobs.cpp  EchoJobs_c_intf.cpp  Makefile_deps  main_page.dox_in
trick_source/sim_services/Environment/: .clang-format  Environment.cpp  Environment_c_intf.cpp  Makefile  Makefile_deps  main_page.dox_in
trick_source/sim_services/EventManager/: .clang-format  EventInstrument.cpp  EventManager.cpp  (+5 more)
trick_source/trick_swig/: .gitignore  CMakeLists.txt  Makefile  PrimitiveAttributesMap.cpp  PrimitiveAttributesMap.hh  cast_as.i  exception.py  extra_functions.i  shortcuts.py  sim_services.i  swig_class_typedef.i  swig_convert_units.cpp  swig_convert_units.hh  swig_double.cpp  swig_double.hh  swig_double.i  swig_global_vars.cpp  swig_int.cpp  swig_int.hh  swig_int.i  swig_int_templates.hh  swig_int_typemap.i  swig_macros.hh  swig_ref.cpp  swig_ref.hh  swig_ref.i  trick_swig.i  unit_test.py  units_attach.i
trick_source/trick_utils/: CMakeLists.txt  makefile
(+6381 files in other folders)
